--- a/talk/cryptocurrencies-great-invention-or-scam-of-the-century/index.html
+++ b/talk/cryptocurrencies-great-invention-or-scam-of-the-century/index.html
@@ -1043,7 +1043,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://lorenzobracciale.github.io/">Lorenzo Bracciale</a></h5>
       <h6 class="card-subtitle">Assistant Professor of Computer Communications</h6>
-      <p class="card-text">My research interests include distributed robotics, mobile computing and programmable matter.</p>
+      <p class="card-text">My research interests include machine learning, data privacy and eHealth.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
