--- a/index.html
+++ b/index.html
@@ -976,14 +976,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>Lorenzo Bracciale earned his Master degree in Telecommunication Engineering (Summa Cum Laude) at the University of Rome “Tor Vergata” in 2006. In 2010 he obtained the Ph.D. degree in Telecommunication and Microelectronics while working on a thesis entitled &ldquo;&ldquo;Peer Multimedia Communication&rdquo;&rdquo;. In 2011 started collaborating with the research group &ldquo;Network Coding and Reliable Communications Group&rdquo; of the Massachusetts Institute of Technology, MIT on the topic &ldquo;data dissemination using partial coding&rdquo;.
-He has been a research fellow in the Electronic Department of the University of Rome “Tor Vergata” (&ldquo;RTD-A&rdquo;) and then in 2022 an assistant professor (“RTD-B”). He currently teaches Computer Science (&gt;100 students/year), Digital Health and Web Technology . He collaborated with the University of Sheffield teaching in the course of Big Data Analytics.
-In 2015 he visited Trinity College Dublin - School of Computer Science &amp; Statistics for a joint project on privacy preserving recommender systems.
-In 2016 he joined a research project with Galápagos National Park for the conservation of Pink Iguanas, an endangered endemic species of iguana.
-He has been the Unit Technical Coordinator of EU H2020 BPR4GDPR project (3 years, 3M€ contribution), coordinating the work on Privacy Enhancing Technologies.
-He produced more than 41 international publication (H-Index 14), served as reviewer in many international journal (e.g., Transaction on Networking, Transaction on Mobile Computing) and has been part of the technical program/organizational committee of many prestigious conferences such as SECON 2021, WCNC 2018 CoNEXT 2015. He is also Topic Editor for MDPI Sensors and General Chair for the conference BHCC2022.
-He gained expertise as a software engineer, founded a startup on smart mobility in 2011 and a digital health startup in 2018, and served as Data Science Advisor for Silicon Valley startups.
-His current research topics include data privacy, network programmability and machine learning and digital health.</p>
+      <p>I am an Assistant Professor at the University of Rome &ldquo;&ldquo;Tor Vergata&rdquo;&rdquo;. My research interest are in distributed systems. I like to apply [cryptograpic, machine learning] algorithms to different verticals. Currently I teach Fundamentals of Computer Science, Web Technology, Digtal Health and Network Softwarization. I like to have impact in everyday life, that&rsquo;s why I founded several startups whose product have been used by thousands of users.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/demo_resume.pdf" target="_blank">resumé</a>.</p>
 
