--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>I am an Assistant Professor at the University of Rome &ldquo;&ldquo;Tor Vergata&rdquo;&rdquo;. My research interest are in distributed systems. I like to apply [cryptograpic, machine learning] algorithms to different verticals. Currently I teach Fundamentals of Computer Science, Web Technology, Digtal Health and Network Softwarization. I like to have impact in everyday life, that&rsquo;s why I founded several startups whose product have been used by thousands of users.</p>
+      <p>I am an Assistant Professor at the University of Rome &ldquo;Tor Vergata&rdquo;. My research interest are in distributed systems. I like to apply [cryptograpic, machine learning] algorithms to different verticals. Currently I teach Fundamentals of Computer Science, Web Technology, Digtal Health and Network Softwarization. I like to have impact in everyday life, that&rsquo;s why I founded several startups whose product have been used by thousands of users.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/demo_resume.pdf" target="_blank">resumé</a>.</p>
 
