--- a/talk/come-funziona-il-green-pass/index.html
+++ b/talk/come-funziona-il-green-pass/index.html
@@ -1034,7 +1034,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://lorenzobracciale.github.io/">Lorenzo Bracciale</a></h5>
       <h6 class="card-subtitle">Assistant Professor of Computer Communications</h6>
-      <p class="card-text">My research interests include machine learning, data privacy and eHealth.</p>
+      <p class="card-text">My research interests include distributed systems, machine learning, data privacy and eHealth.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
