--- a/index.html
+++ b/index.html
@@ -1139,6 +1139,15 @@
 </tr>
 </tbody>
 </table>
+<ul>
+<li>2011 - Visiting scholar at RLE at MIT, Boston, MA. He worked on partial data coding. |</li>
+<li>2012 - Research Fellow (RTD-A), University of Rome “Tor Vergata” |</li>
+<li>2015 - Visiting scholar at Trinity College, Dublin, IE. He worked on privacy preserving recommending systems. |</li>
+<li>2016 - Joined a research project with Galápagos National Park for the conservation of Pink Iguanas. He went there for two months in two field trips, working with engineers and biologists. He worked on embedded systems and on satellite connectivity in remote areas. |</li>
+<li>2015 - Joined the EU Japan research project <a href="http://www.icn2020.org/" target="_blank" rel="noopener">ICN2020</a> on Information Centric Networks. Works on the performance evaluations of distributed systems. |</li>
+<li>2018 - Unit Technical Coordinator of H2020 EU project BPR4GDPR, where he led the WP on Privacy Enhancing Technologies. |</li>
+<li>2022 - Assistant Professor (RTD-B), University of Rome “Tor Vergata” |</li>
+</ul>
 
   </div>
 
