--- a/courses/network-softwarization/intrusion_detection/index.html
+++ b/courses/network-softwarization/intrusion_detection/index.html
@@ -790,6 +790,10 @@ Flow classification problem We consider a Intrusion Detection Evaluation Dataset
       
 
 
+  <li class=""><a href="/courses/network-softwarization/pandas_tutorial/">Pandas Tutorial</a></li>
+
+
+
   <li class=""><a href="/courses/network-softwarization/main/">Index</a></li>
 
 
