--- a/courses/network-softwarization/index.html
+++ b/courses/network-softwarization/index.html
@@ -779,7 +779,7 @@
     
     <a href="/courses/network-softwarization/main/"  class="summary-link">
       <div class="article-style">
-        Under construction
+         Introduction to the ML environment: Colab, numpy, conda Data manipulation with pandas tutorial Data visualiztion with seaborn matplotlib, and networkx Exploratory Data Analysis (EDA) on a network trace Classification of encrypted flows for intrusion detection tutorial 
       </div>
     </a>
     
