--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>I am an Assistant Professor at the University of Rome &ldquo;Tor Vergata&rdquo;. My research interests are distributed systems, data privacy, eHealth. I apply cryptographic and machine learning algorithms to problems in different verticals. Currently, I teach Fundamentals of Computer Science, Web Technology, Digtal Health and Network Softwarization. I like to create digital solutions used by thousands of users inside technological startups.</p>
+      <p>I am an Assistant Professor at the University of Rome &ldquo;Tor Vergata&rdquo;. My research interests are distributed systems, data privacy, eHealth. I apply cryptographic and machine learning algorithms to problems in different verticals. Currently, I teach Fundamentals of Computer Science, Web Technology, Digtal Health and Network Softwarization. I like to create digital solutions used by thousands of users with technological startups.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
@@ -1096,13 +1096,13 @@
 
   <div class="col-12">
     <ul>
-<li>2011 - Visiting scholar at RLE at MIT, Boston, MA. He worked on partial data coding. |</li>
-<li>2012 - Research Fellow (RTD-A), University of Rome “Tor Vergata” |</li>
-<li>2015 - Visiting scholar at Trinity College, Dublin, IE. He worked on privacy preserving recommending systems. |</li>
-<li>2016 - Joined a research project with Galápagos National Park for the conservation of Pink Iguanas. He went there for two months in two field trips, working with engineers and biologists. He worked on embedded systems and on satellite connectivity in remote areas. |</li>
-<li>2015 - Joined the EU Japan research project <a href="http://www.icn2020.org/" target="_blank" rel="noopener">ICN2020</a> on Information Centric Networks. Works on the performance evaluations of distributed systems. |</li>
-<li>2018 - Unit Technical Coordinator of H2020 EU project BPR4GDPR, where he led the WP on Privacy Enhancing Technologies. |</li>
-<li>2022 - Assistant Professor (RTD-B), University of Rome “Tor Vergata” |</li>
+<li>2011 - Visiting scholar at <a href="https://www.rle.mit.edu/" target="_blank" rel="noopener">RLE at MIT</a>, Boston, MA. He worked on partial data coding.</li>
+<li>2012 - Research Fellow (RTD-A), <a href="http://web.uniroma2.it/" target="_blank" rel="noopener">University of Rome Tor Vergata</a></li>
+<li>2015 - Visiting scholar at <a href="https://www.tcd.ie/" target="_blank" rel="noopener">Trinity College</a>, Dublin, IE. He worked on privacy preserving recommending systems.</li>
+<li>2016 - Joined a research project with <a href="https://en.wikipedia.org/wiki/Gal%C3%A1pagos_National_Park" target="_blank" rel="noopener">Galápagos National Park</a> for the conservation of <a href="https://galapagosconservation.org.uk/wildlife/galapagos-pink-land-iguana/" target="_blank" rel="noopener">Pink Iguanas</a>. He took part in two two-month expeditions to work in the field with engineers and biologists. He worked on embedded systems and on satellite connectivity in remote areas.</li>
+<li>2015 - Joined the EU Japan research project <a href="http://www.icn2020.org/" target="_blank" rel="noopener">ICN2020</a> on Information Centric Networks. He worked on the performance evaluations of <a href="https://en.wikipedia.org/wiki/Information-centric_networking" target="_blank" rel="noopener">ICN</a>.</li>
+<li>2018 - Unit Technical Coordinator of H2020 EU project <a href="https://www.bpr4gdpr.eu/" target="_blank" rel="noopener">BPR4GDPR</a>, where he led the WP on Privacy Enhancing Technologies.</li>
+<li>2022 - Assistant Professor (RTD-B), <a href="http://web.uniroma2.it/" target="_blank" rel="noopener">University of Rome Tor Vergata</a></li>
 </ul>
 
   </div>
