--- a/courses/network-softwarization/intrusion_detection/index.html
+++ b/courses/network-softwarization/intrusion_detection/index.html
@@ -784,6 +784,10 @@ Flow classification problem We consider a Intrusion Detection Evaluation Dataset
       
 
 
+  <li class=""><a href="/courses/network-softwarization/pandas_tutorial/">Pandas Tutorial</a></li>
+
+
+
   <li class=""><a href="/courses/network-softwarization/main/">Index</a></li>
 
 
@@ -1489,7 +1493,7 @@ weighted avg       0.95      0.95      0.95    145569
 
   
   <p class="powered-by copyright-license-text">
-    © 2022 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2023 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
