--- a/event/index.html
+++ b/event/index.html
@@ -774,7 +774,7 @@
     
     <a href="/talk/intelligenza-artificiale-e-telemedicina-rischi-e-opportunita-dellapplicazione-delle-tecnologie-dellinformazione/"  class="summary-link">
       <div class="article-style">
-        Resoconto dell&rsquo;analisi delle vulnerabilità nei dispositivi acquistati dalla Pubblica Amministrazione
+        Talk su Intelligenza artificiale e telemedicina al Congresso Nazionale di Medicina Geriatrica (FIMeG). A seguire, valutazione mediante intelligenza artificiale di un paziente fragile
       </div>
     </a>
     
